<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ContactInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/left" />

            <TextView
                android:id="@+id/header_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_4"
                android:layout_marginRight="@dimen/right_16"
                android:layout_marginBottom="@dimen/top_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/info"
                android:textAppearance="@style/header_tv" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_16"
                    android:layout_marginTop="@dimen/top_8"
                    android:layout_marginRight="@dimen/right_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/right_16"
                        android:padding="5dp"
                        android:text="@string/name"
                        android:textAppearance="@style/form_data" />

                    <EditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_border"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="Name"
                        android:padding="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_16"
                    android:layout_marginTop="@dimen/top_16"
                    android:layout_marginRight="@dimen/right_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/right_16"
                        android:padding="5dp"
                        android:text="@string/mobile_no"
                        android:textAppearance="@style/form_data" />

                    <EditText
                        android:id="@+id/mobile_no_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_border"
                        android:inputType="number"
                        android:maxLength="10"
                        android:hint="Mobile number"
                        android:padding="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/designation_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_16"
                    android:layout_marginTop="@dimen/top_16"
                    android:layout_marginRight="@dimen/right_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/right_16"
                        android:padding="5dp"
                        android:text="@string/designation"
                        android:textAppearance="@style/form_data" />

                    <EditText
                        android:id="@+id/designation_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_border"
                        android:hint="Designation"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:padding="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/req_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/left_20"
                    android:layout_marginLeft="@dimen/left_20"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/right_20"
                    android:layout_marginRight="@dimen/right_20"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tab_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/request_otp"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_24"
                    android:layout_marginRight="@dimen/right_24"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already registered ?"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/logIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/left_8"
                        android:text="Log In"
                        android:textColor="@color/input_light" />

                </LinearLayout>

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/otp_validation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/left_20"
                    android:layout_marginTop="@dimen/top_16"
                    android:layout_marginRight="@dimen/right_20"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pad_5"
                        android:text="Enter OTP"
                        android:textAppearance="@style/value_tv" />

                    <EditText
                        android:id="@+id/otp_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_border"
                        android:hint="Enter OTP"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="8dp" />

                    <TextView
                        android:id="@+id/otp_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_8" />

                    <LinearLayout
                        android:id="@+id/validation_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_20"
                        android:layout_marginBottom="@dimen/bottom_16"
                        android:background="@drawable/btn"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/tab_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Verify"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>